update to add spring validation against openapi generated code
